<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/ic_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/input_name"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:textColorHint="#B4B4B4"
        android:textAlignment="center"
        android:paddingTop="17dp"
        android:inputType="text"
        android:background="@drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        android:textColorHint="#B4B4B4"
        android:textAlignment="center"
        android:paddingTop="17dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:text="@string/decide"
        android:textColor="#000000"
        android:textSize="23sp"
        android:background="@drawable/decide"
        style="@style/RoundedButtonStyle"
        app:layout_constraintTop_toBottomOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
